update the task

--- a/index.html
+++ b/index.html
@@ -1,40 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   
+  <head>
     <title>Mohammad Bujaber</title>
-</head>
-    <!-- section 1 -->
+  </head>
+  <!-- section 1 -->
 
-<body>
-    <div style="background-color:antiquewhite;">
-
-        <h1>Mohammad Bujaber</h1>
-<p>I love pistachio</p>
-<img
-src="https://www.daleeeel.com/f/res/w06/locations-photos/000/334/0033462-269-rinnoo-57e0c7e5a2e14b27a570e80b848b5a77-r02.jpg"
-height="274"
-width="640"
-alt="pistachio"
-/>
+  <body>
+    <div style="background-color: antiquewhite">
+      <h1>Mohammad Bujaber</h1>
+      <p>I love pistachio</p>
+      <img
+        src="https://www.daleeeel.com/f/res/w06/locations-photos/000/334/0033462-269-rinnoo-57e0c7e5a2e14b27a570e80b848b5a77-r02.jpg"
+        height="274"
+        width="640"
+        alt="pistachio"
+      />
     </div>
-    <hr/>
+    <hr />
 
     <!-- section 2 -->
-    <div style="background-color:azure;">
-            <h2>My hobbies</h2>
-            <ul>
-                <a href="https://signal.avg.com/hubfs/Blog_Content/Avg/Signal/AVG%20Signal%20Images/9%20Ways%20to%20Boost%20Your%20Gaming%20Rig/How_to_Improve_Your_Gaming_PC_Performance-Hero.jpg"><strong><li>gaming</li></strong> </a>
-                <a href="https://assets.entrepreneur.com/content/3x2/2000/20160628101609-Coding.jpeg"><li>coding</li></a>
-                <a href="https://cdn4.explainthatstuff.com/og-large-swimming.jpg"><li>swimming</li></a>
-                <a href="https://storage.googleapis.com/jarida-cdn/images/1560612600931372700/1560613557000/1280x960.jpg"><li>playing football</li></a>
-                <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS95mGZw6daibPByjfzprLe0LMdIeU_l5Ajmg&usqp=CAU"><li>Gym</li></a>
-              </ul>
-
+    <div style="background-color: azure">
+      <h2>My hobbies</h2>
+      <ul>
+        <a
+          href="https://signal.avg.com/hubfs/Blog_Content/Avg/Signal/AVG%20Signal%20Images/9%20Ways%20to%20Boost%20Your%20Gaming%20Rig/How_to_Improve_Your_Gaming_PC_Performance-Hero.jpg"
+          ><strong><li>gaming</li></strong>
+        </a>
+        <a
+          href="https://assets.entrepreneur.com/content/3x2/2000/20160628101609-Coding.jpeg"
+          ><li>coding</li></a
+        >
+        <a href="https://cdn4.explainthatstuff.com/og-large-swimming.jpg"
+          ><li>swimming</li></a
+        >
+        <a
+          href="https://storage.googleapis.com/jarida-cdn/images/1560612600931372700/1560613557000/1280x960.jpg"
+          ><li>playing football</li></a
+        >
+        <a
+          href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS95mGZw6daibPByjfzprLe0LMdIeU_l5Ajmg&usqp=CAU"
+          ><li>Gym</li></a
+        >
+      </ul>
     </div>
-    <hr/>
+    <hr />
+  </body>
 
-</body>
+  <!-- Section 3 -->
+  <footer style="background-color: black; color: white">
+    <a href="https://twitter.com/m_bujaber" target="_blank"
+      >follow me on twitter
+    </a>
+    <br />
+    <a href="https://wa.me/96599911988" target="_blank">whatsapp me</a>
+  </footer>
 </html>
-
-
