--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="./styles.css" type="text/css" rel="stylesheet" />
     <title>Mohammad Bujaber</title>
   </head>
   <!-- section 1 -->
@@ -11,8 +12,7 @@
       <p>I love pistachio</p>
       <img
         src="https://www.daleeeel.com/f/res/w06/locations-photos/000/334/0033462-269-rinnoo-57e0c7e5a2e14b27a570e80b848b5a77-r02.jpg"
-        height="274"
-        width="640"
+        class="img"
         alt="pistachio"
       />
     </div>
@@ -20,7 +20,7 @@
 
     <!-- section 2 -->
     <div style="background-color: azure">
-      <h2>My hobbies</h2>
+      <h2 class="hobbies">My hobbies</h2>
       <ul>
         <a
           href="https://signal.avg.com/hubfs/Blog_Content/Avg/Signal/AVG%20Signal%20Images/9%20Ways%20to%20Boost%20Your%20Gaming%20Rig/How_to_Improve_Your_Gaming_PC_Performance-Hero.jpg"
