--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
   <body>
     <div style="background-color: antiquewhite">
-      <h1>Mohammad Bujaber</h1>
+      <h1 class="align">Mohammad Bujaber</h1>
       <p>I love pistachio</p>
       <img
+        class="center"
         src="https://www.daleeeel.com/f/res/w06/locations-photos/000/334/0033462-269-rinnoo-57e0c7e5a2e14b27a570e80b848b5a77-r02.jpg"
-        class="img"
         alt="pistachio"
       />
     </div>
